--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 </div>
     <div class="form-floating">
         <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-        <label for="floatingPassword">コメント</label>
+        <label for="floatingPassword">kokoko</label>
     </div>
     <div class="mybtn">
         <button type="button" class="btn btn-dark">記録</button>
