--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
         .mycomment {
             color: gray;
         }
+        input-group mb{
+             background-color: gray;
+        }
+        input-group mb > li{
+            color: 
 
     </style>
 
@@ -115,17 +120,17 @@
     <div class="input-group mb-3">
       <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</button>
       <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">Action</a></li>
-        <li><a class="dropdown-item" href="#">Another action</a></li>
-        <li><a class="dropdown-item" href="#">Something else here</a></li>
+        <li><a class="dropdown-item" href="#">☆</a></li>
+        <li><a class="dropdown-item" href="#">☆☆</a></li>
+        <li><a class="dropdown-item" href="#">☆☆☆</a></li>
         <li><hr class="dropdown-divider"></li>
-        <li><a class="dropdown-item" href="#">Separated link</a></li>
+        <li><a class="dropdown-item" href="#">☆☆☆☆☆</a></li>
       </ul>
   <input type="text" class="form-control" aria-label="Text input with dropdown button">
 </div>
     <div class="form-floating">
         <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-        <label for="floatingPassword">kokoko</label>
+        <label for="floatingPassword">コメント</label>
     </div>
     <div class="mybtn">
         <button type="button" class="btn btn-dark">記録</button>
