--- a/index.html
+++ b/index.html
@@ -95,12 +95,11 @@
 
         .mycomment {
             color: gray;
+
         }
-        input-group mb{
-             background-color: gray;
+        .form-select{
+            background-color: gray;
         }
-        input-group mb > li{
-            color: 
 
     </style>
 
@@ -117,17 +116,17 @@
         <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
         <label for="floatingInput">映画URL</label>
     </div>
-    <div class="input-group mb-3">
-      <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</button>
-      <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">☆</a></li>
-        <li><a class="dropdown-item" href="#">☆☆</a></li>
-        <li><a class="dropdown-item" href="#">☆☆☆</a></li>
-        <li><hr class="dropdown-divider"></li>
-        <li><a class="dropdown-item" href="#">☆☆☆☆☆</a></li>
-      </ul>
-  <input type="text" class="form-control" aria-label="Text input with dropdown button">
-</div>
+    <div class="input-group mb-5">
+        <label class="input-group-text" for="inputGroupSelect01">Options</label>
+        <select class="form-select" id="inputGroupSelect01">
+            <option selected>レ--選択--</option>
+            <option value="1">⭐</option>
+            <option value="2">⭐⭐</option>
+            <option value="3">⭐⭐⭐</option>
+            <option value="4">⭐⭐⭐⭐</option>
+            <option value="5">⭐⭐⭐⭐⭐</option>
+        </select>
+    </div>
     <div class="form-floating">
         <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
         <label for="floatingPassword">コメント</label>
@@ -197,4 +196,4 @@
 </div>
 </body>
 
-</html>
+
