--- a/index.html
+++ b/index.html
@@ -1,214 +1,187 @@
-<!doctype html>
+<!Doctype html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+		
+		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
+    
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 
+    <title>スパルタペディア</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
+
+    <style>
         * {
             font-family: 'Gowun Dodum', sans-serif;
         }
 
         .mytitle {
-            background-color: green;
-            color: white;
+            width: 100%;
             height: 250px;
+
+            background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://movie-phinf.pstatic.net/20210715_95/1626338192428gTnJl_JPEG/movie_image.jpg');
+            background-position: center;
+            background-size: cover;
+
+            color: white;
+
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-
-            /*画像の場所の指定*/
-            background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://img.freepik.com/free-vector/realistic-colorful-galaxy-background_23-2148965681.jpg");
-            /*貼り付けた画像の位置の指定*/
-            background-position: center;
-            /*指定された箱のサイズにたいして貼り付けた画像の大きさの調整*/
-            background-size: cover;
-
-
         }
 
-        .mytitle > button {
-            /*横幅*/
-            width: 250px;
-            /*高さ*/
+        .mytitle>button {
+            width: 200px;
             height: 50px;
-            /*背景色*/
+
             background-color: transparent;
-            /*枠の太さと色*/
-            border: 1px solid white;
-            /*文字の色*/
             color: white;
-            /*枠の丸み*/
+
             border-radius: 50px;
-            /*枠の外側の隙間（上だけ）*/
-            margin-top: 30px;
+            border: 1px solid white;
+
+            margin-top: 10px;
         }
 
-        /*マイポストクラスの中身の調整*/
-        .mypost {
-            width: 500px;
-            /*箱の外側の余白調整*/
-            margin: 20px auto 20px auto;
-            /*箱の中の余白調整*/
-            padding: 20px 20px 20px 20px;
-            /*箱に影を入れる調整*/
-            /*影を入れるときは「三つ目」の数字を調整*/
-            box-shadow: 0px 0px 3px 0px gray;
-        }
-
-        /*マイbtnの調整*/
-        .mybtn {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
-            margin-top: 20px;
-        }
-
-        /*mubtnのなかのボタンの「外側」の「右側」に余白を*/
-        .mybtn > button {
-            margin-right: 20px;
-        }
-
-        /*:hoverはカーソルを合わせた時の「デザイン」をしていするもの*/
-        .mytitle > button:hover {
-            /*ここでカーソルが重なった時に枠が太くなるように調整*/
-            border: 3px solid white;
-        }
-
-        /*ここでマイカードの中の画像の幅の調整をします。*/
-        .myCard {
-            /*横幅*/
-            width: 1200px;
-            /*画像の外側の余白*/
-            margin: 20px auto 20px auto;
+        .mytitle>button:hover {
+            border: 2px solid white;
         }
 
         .mycomment {
             color: gray;
-
         }
 
-        .form-select {
-            background-color: gray;
+        .mycards {
+            margin: 20px auto 0px auto;
+            width: 95%;
+            max-width: 1200px;
         }
 
+        .mypost {
+            width: 95%;
+            max-width: 500px;
+            margin: 20px auto 0px auto;
+            padding: 20px;
+            box-shadow: 0px 0px 3px 0px gray;
+        }
+
+        .mybtns {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+
+            margin-top: 20px;
+        }
+
+        .mybtns>button {
+            margin-right: 10px;
+        }
     </style>
     <script>
-        $(document).ready(function hey() {
+        $(document).ready(function () {
             fetch("http://spartacodingclub.shop/sparta_api/weather/tokyo").then(res => res.json()).then(data => {
+                console.log(data)
                 let number = data['temp']
                 $('#temp').text(number)
-
-
             })
         })
-
     </script>
-
-    <title>スパルタコーディングクラブ</title>
 </head>
 
 <body>
-<div class="mytitle">
-    <h1>人生最高の映画</h1>
-    <div>今の気温 : <span id="temp">${number}</span>度</div>
-    <!--    onclick="hy()"はこの「タグ」が押されたら、スクリプトの中にある「hy()」関数を実行せよ-->
-    <button onclick="hey()">映画記録</button>
-</div>
-<div class="mypost">
-    <div class="form-floating mb-3">
-        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-        <label for="floatingInput">映画URL</label>
+    <div class="mytitle">
+        <h1>人生最高の映画</h1>
+        <div>今の気温 : <span id="temp">20</span>度</div>
+        <button onclick="hey()">映画記録</button>
     </div>
-    <div class="input-group mb-3">
-        <label class="input-group-text" for="inputGroupSelect01">評価</label>
-        <select class="form-select" id="inputGroupSelect01">
-            <option selected>レ--選択--</option>
-            <option value="1">⭐</option>
-            <option value="2">⭐⭐</option>
-            <option value="3">⭐⭐⭐</option>
-            <option value="4">⭐⭐⭐⭐</option>
-            <option value="5">⭐⭐⭐⭐⭐</option>
-        </select>
+    <div class="mypost">
+        <div class="form-floating mb-3">
+            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+            <label for="floatingInput">映画URL</label>
+        </div>
+        <div class="input-group mb-3">
+            <label class="input-group-text" for="inputGroupSelect01">星点</label>
+            <select class="form-select" id="inputGroupSelect01">
+                <option selected>-- 選択 --</option>
+                <option value="1">⭐</option>
+                <option value="2">⭐⭐</option>
+                <option value="3">⭐⭐⭐</option>
+                <option value="4">⭐⭐⭐⭐</option>
+                <option value="5">⭐⭐⭐⭐⭐</option>
+            </select>
+        </div>
+        <div class="form-floating">
+            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
+                style="height: 100px"></textarea>
+            <label for="floatingTextarea2">コメント</label>
+        </div>
+        <div class="mybtns">
+            <button type="button" class="btn btn-dark">記録</button>
+            <button type="button" class="btn btn-outline-dark">閉じる</button>
+        </div>
     </div>
-    <div class="form-floating">
-        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-        <label for="floatingPassword">コメント</label>
-    </div>
-    <div class="mybtn">
-        <button type="button" class="btn btn-dark">記録</button>
-        <button type="button" class="btn btn-outline-dark">閉じる</button>
-    </div>
-</div>
-<!--    ここで画像を入れる箱を生成しています。-->
-<div class="myCard">
-    <!--        ここの中にある「row-cols-md-3」は「横に並べる画像の数」をいていしています。-->
-    <div class="row row-cols-1 row-cols-md-4 g-4">
-        <div class="col">
-            <div class="card">
-                <!--                    ここで画像の「パス」（画像の有る場所）を指定しています。-->
-                <img src="https://m.media-amazon.com/images/M/MV5BNDYxNjQyMjAtNTdiOS00NGYwLWFmNTAtNThmYjU5ZGI2YTI1XkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_.jpg"
-                     class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">ここに映画のタイトルが入ります</h5>
-                    <p class="card-text">ここに映画の説明が入ります</p>
-                    <p>⭐⭐⭐</p>
-                    <p class="mycomment">ここにコメントが入ります</p>
+    <div class="mycards">
+        <div class="row row-cols-1 row-cols-md-4 g-4">
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://eiga.k-img.com/images/movie/97490/photo/6bfe14f287a8a19b/320.jpg?1670141541"
+                        class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">映画のタイトルが入ります</h5>
+                        <p class="card-text">ここに映画の説明が入ります。</p>
+                        <p>⭐⭐⭐</p>
+                        <p class="mycomment">自分の一行レビューを書きます</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <!--                    ここで画像の「パス」（画像の有る場所）を指定しています。-->
-                <img src="https://m.media-amazon.com/images/M/MV5BNDYxNjQyMjAtNTdiOS00NGYwLWFmNTAtNThmYjU5ZGI2YTI1XkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_.jpg"
-                     class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">ここに映画のタイトルが入ります</h5>
-                    <p class="card-text">ここに映画の説明が入ります</p>
-                    <p>⭐⭐⭐</p>
-                    <p class="mycomment">ここにコメントが入ります</p>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://eiga.k-img.com/images/movie/97490/photo/6bfe14f287a8a19b/320.jpg?1670141541"
+                        class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">映画のタイトルが入ります</h5>
+                        <p class="card-text">ここに映画の説明が入ります。</p>
+                        <p>⭐⭐⭐</p>
+                        <p class="mycomment">自分の一行レビューを書きます</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <!--                    ここで画像の「パス」（画像の有る場所）を指定しています。-->
-                <img src="https://m.media-amazon.com/images/M/MV5BNDYxNjQyMjAtNTdiOS00NGYwLWFmNTAtNThmYjU5ZGI2YTI1XkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_.jpg"
-                     class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">ここに映画のタイトルが入ります</h5>
-                    <p class="card-text">ここに映画の説明が入ります</p>
-                    <p>⭐⭐⭐</p>
-                    <p class="mycomment">ここにコメントが入ります</p>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://eiga.k-img.com/images/movie/97490/photo/6bfe14f287a8a19b/320.jpg?1670141541"
+                        class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">映画のタイトルが入ります</h5>
+                        <p class="card-text">ここに映画の説明が入ります。</p>
+                        <p>⭐⭐⭐</p>
+                        <p class="mycomment">自分の一行レビューを書きます</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <!--                    ここで画像の「パス」（画像の有る場所）を指定しています。-->
-                <img src="https://m.media-amazon.com/images/M/MV5BNDYxNjQyMjAtNTdiOS00NGYwLWFmNTAtNThmYjU5ZGI2YTI1XkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_.jpg"
-                     class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">ここに映画のタイトルが入ります</h5>
-                    <p class="card-text">ここに映画の説明が入ります</p>
-                    <p>⭐⭐⭐</p>
-                    <p class="mycomment">ここにコメントが入ります</p>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://eiga.k-img.com/images/movie/97490/photo/6bfe14f287a8a19b/320.jpg?1670141541"
+                        class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">映画のタイトルが入ります</h5>
+                        <p class="card-text">ここに映画の説明が入ります。</p>
+                        <p>⭐⭐⭐</p>
+                        <p class="mycomment">自分の一行レビューを書きます</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 </body>
 
 </html>
